@@ -1,4 +1,7 @@
 Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- add popup while redialing
+
+Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - rename Unreal 2003 Demo -> UT 2003
 
 Oct 01, 2002: Alex Burger <alex@fragit_dot_net>
